--- a/demo/index.html
+++ b/demo/index.html
@@ -15,7 +15,7 @@
     <h4>Inline</h4>
     <div style="display:inline-block; min-height:290px;witdh:100px;">
       <!-- uib-datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm" custom-class="getDayClass(date, mode)"></uib-datepicker -->      
-      <date-range ng-model="range" options="pickerOptions"></date-range>
+      <date-range ng-model="range"></date-range>
       {{range.start}}--{{range.end}}
     </div>
 </div>
