--- a/demo/index.html
+++ b/demo/index.html
@@ -11,12 +11,11 @@
   <body>
 
 <div ng-controller="DaterangeDemoCtrl">
-    <pre>Selected date is: <em>{{dt | date:'fullDate' }}</em></pre>
-    <h4>Inline</h4>
+    <h4>Demo</h4>
     <div style="display:inline-block; min-height:290px;witdh:100px;">
-      <!-- uib-datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm" custom-class="getDayClass(date, mode)"></uib-datepicker -->      
       <date-range ng-model="range"></date-range>
-      {{range.start}}--{{range.end}}
+      <div>{{range.start}}--{{range.end}} </div>
+      <div ng-click="range.start=null;range.end=null">Reset</div>
     </div>
 </div>
   </body>
